...
        )
    }

    Scaffold(
        topBar = {
            TopAppBar(
                title = { Text("Join Group") },
                navigationIcon = {
                    IconButton(onClick = { navController.popBackStack() }) {
                        Icon(Icons.Default.ArrowBack, contentDescription = "Back")
                    }
                },
            )
...
            verticalArrangement = Arrangement.Center,
        ) {
            // Join Code Input
            TextField(
                value = joinCode,
                onValueChange = { joinCode = it },
                label = { Text("Enter Join Code") },
                modifier = Modifier.fillMaxWidth(),
                singleLine = true,
                maxLines = 1,
                colors =
                    TextFieldDefaults.colors(
                        focusedContainerColor = MaterialTheme.colorScheme.surface,
...
                    } else {
                        joinGroupMessage = "Invalid join code!"
                    }
                },
                enabled = joinCode.length == 6,
            ) {
                Text("Check Group")
            }

            Spacer(modifier = Modifier.height(16.dp))

            if (groupExists) {
                groupName?.let {
...
